--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "main": "src/server.js",
   "scripts": {
     "type": "module",
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "knex": "knex"
   },
   "author": "Itamar Junior",
   "license": "ISC",
   "description": "API para gerenciamento de pedidos de restaurante",
   "dependencies": {
-    "express": "^4.21.2"
+    "@types/knex": "^0.15.2",
+    "express": "^4.18.2",
+    "knex": "^3.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.2.2"
   }
 }
