--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/knex": "^0.15.2",
     "express": "^4.18.2",
     "knex": "^3.1.0",
+    "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
